# ChemWorld

./: .gitattributes  .gitignore  404.html  DEVELOPMENT.md  LICENSE  README.md  TODO.md  TODO_PROFESSIONAL.md  TODO_PROFESSIONAL_DEEPENING.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  todolist.md  world_foundation_todolist.md
.github/: pull_request_template.md
aaai_experiment_plan/: index.html
aaai_results_template/: index.html
action_schema/: index.html
agent_interaction_examples/: index.html
agent_interface/: index.html
agent_tracks/: index.html
api_reference/: index.html
apps/: __init__.py
architecture/: index.html
architecture_report/: index.html
backends/: index.html
baseline_reference/: index.html
benchmark_overview/: index.html
benchmark_protocol/: index.html
benchmark_release/: index.html
campaign_model/: index.html
causal_worlds/: index.html
chemworld_overview_zh/: index.html
claims/: README.md
code_review_audit/: index.html
codex55_medium_behavior_report/: index.html
configs/: current.json  private_eval.placeholder.json  public_dev.json  public_test.json
current_progress/: index.html
dataset_layer/: index.html
demos/: index.html
discovery_benchmark/: index.html
docs/: aaai_experiment_plan.md  aaai_results_template.md  action_schema.md  agent_interaction_examples.md  agent_interface.md  agent_tracks.md  api_reference.md  architecture.en.md  architecture.md  architecture_report.md  backends.md  baseline_reference.md  benchmark_overview.en.md  benchmark_overview.md  benchmark_protocol.md  benchmark_release.md  campaign_model.md  causal_worlds.en.md  causal_worlds.md  chemworld_overview_zh.md  code_review_audit.md  codex55_medium_behavior_report.md  current_progress.md  dataset_layer.md  demos.md  discovery_benchmark.md  env_cards.md  environment_self_consistency_audit_zh.md  ethics_and_data.md  experimental_intelligence.en.md  experimental_intelligence.md  five_year_todo.md  flagship_experiments.en.md  flagship_experiments.md  getting_started.md  index.en.md  index.md  instrument_contracts.md  interactive_task_lab.md  leaderboard_project_blueprint.md  (+51 more)
en/: index.html
env_cards/: index.html
environment_self_consistency_audit_zh/: index.html
ethics_and_data/: index.html
examples/: demo_agent_facing_api.py  demo_compare_baselines.py  demo_dataset_agent_trace_export.py  demo_llm_replay_harness.py  demo_manual_event_sequence.py  demo_rl_vector_wrapper.py  demo_submission_bundle.py  demo_verify_and_inspect.py  run_random.py
experimental_intelligence/: index.html
getting_started/: index.html
instrument_contracts/: index.html
(+1542 files in other folders)
