[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "chemworld-bench"
version = "0.2.0"
description = "A replayable physical-chemistry world-model environment for training and evaluating experimental agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ChemWorld Contributors" }
]
keywords = [
  "ai4science",
  "benchmark",
  "chemical-engineering",
  "gymnasium",
  "world-model",
  "agent-evaluation",
  "reinforcement-learning"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "gymnasium>=0.29,<1.1",
  "numpy>=1.26,<2.3",
  "pandas>=2.1,<3.0",
  "pyyaml>=6.0,<7.0",
  "scipy>=1.10,<1.19",
  "scikit-learn>=1.4,<1.9",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-static-i18n>=1.3,<2.0",
]
notebooks = [
  "ipykernel>=6.29",
  "jupyter>=1.1",
  "matplotlib>=3.8,<3.11",
]
rl = [
  "stable-baselines3>=2.9,<3.0",
]
physchem-ref = [
  "cantera>=3.0,<4.0",
  "chemicals>=1.3",
  "fluids>=1.1",
  "thermo>=0.4",
]

[project.scripts]
chemworld = "chemworld.cli:main"

[project.urls]
Homepage = "https://github.com/sunyrain/ChemWorld"
Documentation = "https://sunyrain.github.io/ChemWorld/"
Issues = "https://github.com/sunyrain/ChemWorld/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chemworld"]

[tool.hatch.build.targets.wheel.force-include]
"configs" = "chemworld/resources/configs"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["N803", "N806", "N815"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501", "RUF001"]
"apps/task_lab/*.py" = ["RUF001"]

[tool.mypy]
python_version = "3.11"
packages = ["chemworld"]
disallow_untyped_defs = true
check_untyped_defs = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "gymnasium.*",
  "pandas.*",
  "scipy.*",
  "sklearn.*",
  "stable_baselines3.*",
  "torch.*",
  "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=chemworld --cov-report=term-missing"
testpaths = ["tests"]
